Apply minor UX/UI enhancements

--- a/w3/index.html
+++ b/w3/index.html
@@ -238,6 +238,9 @@
 			<h2 class="headline">composer</h2>
 			<hr class="ruler-top">
 			<p>Here is the place to jump-start your Charta Caeli experience. This specialized XML editor is for instant creating simple chart definitions from scratch. It supports the whole chart specification as defined by XSD although UX/UI regarding hints on syntax or numerical ranges is poor. The editor even serves well in playing around with values of larger definitions as provided by the gallery. Things get hard however when it comes to chart definitions with hundreds of elements and in particular on mobile devices. Due to this, if you plan to define a large chart from scratch consider using your favorite XML editor locally and upload the file when ready.</p>
+			<div class="alert alert-primary d-sm-block d-md-none">
+				Please use a tablet or desktop PC for optimal UI experience as composer is designed for larger display sizes.
+			</div>
 		</div>
 	</div>
 	<!-- end composer -->
@@ -285,11 +288,12 @@
 	</div>
 	<!-- end concepts -->
 	<!-- begin community -->
-	<div id="ccCommunity" class="navbar-offset">
+	<div id="ccCommunity">
 		<div class="container">
 			<div class="row">
 				<div class="col text-center">
-					<img class="img-fluid d-none d-md-inline" src="brand.png" als="Charta Caeli">
+					<img class="img-fluid d-sm-inline d-md-none" src="brandicon.png" alt="Charta Caeli">
+					<img class="img-fluid d-none d-md-inline" src="brand.png" alt="Charta Caeli">
 					<p>Stay tuned and share...
 					<br><span class="contact-social">
 						<a href="#"><i class="fab fa-facebook"></i></a>
